--- a/Servlet-test/pom.xml
+++ b/Servlet-test/pom.xml
@@ -20,15 +20,19 @@
       <version>3.1.0</version>
     </dependency>
     <dependency>
-      <groupId>org.xerial</groupId>
-      <artifactId>sqlite-jdbc</artifactId>
-      <version>3.7.2</version>
-    </dependency>
-    <dependency>
       <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
       <version>9.4.1208</version>
     </dependency>
+    <!-- Hibernate -->
+    <!-- to start need only this -->
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-core</artifactId>
+      <version>5.2.4.Final</version>
+    </dependency>
+
+
   </dependencies>
 
   <build>
