remove useless includes in pom.xml, get rid of annoying AbstractMethod exception

--- a/demo/demo/src/main/resources/application.properties
+++ b/demo/demo/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 spring.datasource.url = jdbc:postgresql://localhost:5432/ForumDB
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=admin
 spring.datasource.password=1q2w3e
 spring.jpa.hibernate.ddl-auto=update
+
+
 
 
